<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/message_choose_meeting"
            android:textColor="#212121"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/shape_spinner"
            android:paddingBottom="2dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="2dp">

            <Spinner
                android:id="@+id/snListMeeting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@android:color/transparent"
                android:paddingEnd="30dp"
                android:paddingStart="0dp" />

            <ImageView
                android:id="@+id/ivSpinnerDropDown"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_spinner_drop_down" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMeetingInformation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonCustom"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_cancel_button"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/ButtonCustom"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_confirm_button"
            android:text="@string/btn_confirm" />
    </LinearLayout>
</LinearLayout>